// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodeUniqueFilterInputType Definition Article has a unique filter input type: ArticleUniqueFilterInput 1`] = `
""""
Identifies exactly one "Article" with one of the following combination of components' value:
- id
- category / slug
"""
input ArticleUniqueFilterInput {
  """This UUID identifies an Article publicly"""
  id: UUIDv4
  category: CategoryUniqueFilterInput
  slug: NonEmptyTrimmedString
}"
`;

exports[`NodeUniqueFilterInputType Definition Article has a unique filter input type: ArticleUniqueFilterWithoutCategoryInput 1`] = `
""""
Given a "category", identifies exactly one "Article" with one of the following combination of components' value:
- (category) / slug
"""
input ArticleUniqueFilterWithoutCategoryInput {
  slug: NonEmptyTrimmedString!
}"
`;

exports[`NodeUniqueFilterInputType Definition ArticleExtension has a unique filter input type: ArticleExtensionUniqueFilterInput 1`] = `
""""
Identifies exactly one "ArticleExtension" with one of the following combination of components' value:
- article
"""
input ArticleExtensionUniqueFilterInput {
  article: ArticleUniqueFilterInput!
}"
`;

exports[`NodeUniqueFilterInputType Definition ArticleTag has a unique filter input type: ArticleTagUniqueFilterInput 1`] = `
""""
Identifies exactly one "ArticleTag" with one of the following combination of components' value:
- article / tag
- article / order
"""
input ArticleTagUniqueFilterInput {
  article: ArticleUniqueFilterInput!
  tag: TagUniqueFilterInput
  order: UnsignedInt
}"
`;

exports[`NodeUniqueFilterInputType Definition ArticleTag has a unique filter input type: ArticleTagUniqueFilterWithoutArticleInput 1`] = `
""""
Given an "article", identifies exactly one "ArticleTag" with one of the following combination of components' value:
- (article) / tag
- (article) / order
"""
input ArticleTagUniqueFilterWithoutArticleInput {
  tag: TagUniqueFilterInput
  order: UnsignedInt
}"
`;

exports[`NodeUniqueFilterInputType Definition ArticleTag has a unique filter input type: ArticleTagUniqueFilterWithoutTagInput 1`] = `
""""
Given a "tag", identifies exactly one "ArticleTag" with one of the following combination of components' value:
- article / (tag)
"""
input ArticleTagUniqueFilterWithoutTagInput {
  article: ArticleUniqueFilterInput!
}"
`;

exports[`NodeUniqueFilterInputType Definition ArticleTagModeration has a unique filter input type: ArticleTagModerationUniqueFilterInput 1`] = `
""""
Identifies exactly one "ArticleTagModeration" with one of the following combination of components' value:
- articleTag / moderator
"""
input ArticleTagModerationUniqueFilterInput {
  articleTag: ArticleTagUniqueFilterInput!
  moderator: UserUniqueFilterInput!
}"
`;

exports[`NodeUniqueFilterInputType Definition ArticleTagModeration has a unique filter input type: ArticleTagModerationUniqueFilterWithoutArticleTagInput 1`] = `
""""
Given an "articleTag", identifies exactly one "ArticleTagModeration" with one of the following combination of components' value:
- (articleTag) / moderator
"""
input ArticleTagModerationUniqueFilterWithoutArticleTagInput {
  moderator: UserUniqueFilterInput!
}"
`;

exports[`NodeUniqueFilterInputType Definition ArticleTagModeration has a unique filter input type: ArticleTagModerationUniqueFilterWithoutModeratorInput 1`] = `
""""
Given a "moderator", identifies exactly one "ArticleTagModeration" with one of the following combination of components' value:
- articleTag / (moderator)
"""
input ArticleTagModerationUniqueFilterWithoutModeratorInput {
  articleTag: ArticleTagUniqueFilterInput!
}"
`;

exports[`NodeUniqueFilterInputType Definition Category has a unique filter input type: CategoryUniqueFilterInput 1`] = `
""""
Identifies exactly one "Category" with one of the following combination of components' value:
- id
- parent / slug
- parent / order
"""
input CategoryUniqueFilterInput {
  id: UUIDv4
  parent: CategoryUniqueFilterInput
  slug: NonEmptyTrimmedString
  order: UnsignedInt
}"
`;

exports[`NodeUniqueFilterInputType Definition Category has a unique filter input type: CategoryUniqueFilterWithoutParentInput 1`] = `
""""
Given a "parent", identifies exactly one "Category" with one of the following combination of components' value:
- (parent) / slug
- (parent) / order
"""
input CategoryUniqueFilterWithoutParentInput {
  slug: NonEmptyTrimmedString
  order: UnsignedInt
}"
`;

exports[`NodeUniqueFilterInputType Definition Tag has a unique filter input type: TagUniqueFilterInput 1`] = `
""""
Identifies exactly one "Tag" with one of the following combination of components' value:
- id
- slug
"""
input TagUniqueFilterInput {
  id: UUIDv4
  slug: NonEmptyTrimmedString
}"
`;

exports[`NodeUniqueFilterInputType Definition User has a unique filter input type: UserUniqueFilterInput 1`] = `
""""
Identifies exactly one "User" with one of the following combination of components' value:
- id
- username
"""
input UserUniqueFilterInput {
  id: UUIDv4
  username: NonEmptyTrimmedString
}"
`;

exports[`NodeUniqueFilterInputType Definition UserProfile has a unique filter input type: UserProfileUniqueFilterInput 1`] = `
""""
Identifies exactly one "UserProfile" with one of the following combination of components' value:
- user
"""
input UserProfileUniqueFilterInput {
  user: UserUniqueFilterInput!
}"
`;
